--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
     </div>
 
   <div class="bottom-container">
-    <br>
-    <a class="footer-link" href="https://www.whynotpromoshop.com">Branded Products</a><br>
+    
+    <a class="footer-link" href="https://www.facebook.com/tanya.whynot.148">Facebook</a>
+    <a class="footer-link" href="https://www.whynotpromoshop.com">Website</a><br>
     <img src="images/space-removebg.png" alt="space">
     <p>© 2020 Tanya Whynot.</p>
   </div>
