--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <a class="footer-link" href="https://www.facebook.com/tanya.whynot.148">Facebook</a>
     <a class="footer-link" href="https://www.whynotpromoshop.com">Website</a><br>
     <img src="images/space-removebg.png" alt="space">
-    <p>© 2020 Tanya Whynot.</p>
+    <p>© 2020 Tanya Whynot..</p>
   </div>
 
 
