how can I help change

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div class="contact-me">
       <h2>Get In Touch.</h2>
-      <h3>How can I help you?</h3>
+      <h3>How can I help?</h3>
       <p>Need a website for your business or hobby?<br>
          Would you like to give your current website a refreshed, new look?<br>
          Need an app for that?<br>
@@ -70,7 +70,7 @@
     <a class="footer-link" href="https://www.facebook.com/tanya.whynot.148">Facebook</a>
     <a class="footer-link" href="https://www.whynotpromoshop.com">Website</a><br>
     <img src="images/space-removebg.png" alt="space">
-    <p>© 2020 Tanya Whynot..</p>
+    <p>© 2020 Tanya Whynot.</p>
   </div>
 
 
