--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
       <h2>Get In Touch.</h2>
       <h3>How can I help?</h3>
       <p>Need a website for your business or hobby?<br>
-         Would you like to give your current website a refreshed, new look?<br>
+         Want to give your current website a refreshed, new look?<br>
          Need an app for that?<br>
-         In need of branded products or apparel?<br>
+         Need branded products or logoed apparel?<br>
          Let's talk.</p>
       <a class="btn" href="mailto:wataryky@gmail.com">CONTACT ME</a>
 
