--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <h2>Get In Touch.</h2>
       <h3>How can I help?</h3>
       <p>Need a website for your business or hobby?<br>
-         Want to give your current website a refreshed, new look?<br>
+         Want a refreshed, new look for your current site?<br>
          Need an app for that?<br>
          Need branded products or logoed apparel?<br>
          Let's talk.</p>
