--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="top-container">
     <img class="right-cloud" src="images/right-cloud-removebg.png" alt="cloud">
     <h1>Hello, I'm Tanya,</h1>
-    <h2>web designer, app developer, marketer.</h2>
+    <h2 class="title">web designer, app developer, marketer.</h2>
     <img class="left-cloud" src="images/left-cloud-removebg.png" alt="cloud">
     <img src="images/country-removebg.png" alt="country">
   </div>
